JIT stub slow paths that would be identical to that of an interpreter should be factored out https://bugs.webkit.org/show_bug.cgi?id=75743 <rdar://problem/10657024>

Reviewed by Geoff Garen.

* GNUmakefile.list.am:
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
* JavaScriptCore.xcodeproj/project.pbxproj:
* jit/JITStubs.cpp:
(JSC::DEFINE_STUB_FUNCTION):
* runtime/CommonSlowPaths.h: Added.
(JSC::CommonSlowPaths::opInstanceOfSlow):
(JSC::CommonSlowPaths::opIn):
(JSC::CommonSlowPaths::opResolve):
(JSC::CommonSlowPaths::opResolveSkip):
(JSC::CommonSlowPaths::opResolveWithBase):
(JSC::CommonSlowPaths::opResolveWithThis):



Canonical link: https://commits.webkit.org/92555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104349 268f45cc-cd09-0410-ab3c-d52691b4dbfc